# lich

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.operator  README.md  Taskfile.yaml
backend/: Cargo.toml  Dockerfile  Taskfile.yaml
backend/src/: main.rs  operator_connection.rs  state.rs  store.rs
backend/src/state/: init.rs  mod.rs  ready.rs  transfer.rs  update.rs  waiting_for_operator.rs
config/: Cargo.toml  head.toml  tail.toml
config/src/: lib.rs
config/test/: example.toml
examples/: client.rs
examples/client-bench/: Cargo.toml  Taskfile.yaml
examples/client-bench/src/: main.rs
examples/client-test/: Cargo.toml  Taskfile.yaml
examples/client-test/src/: main.rs
frontend/: Cargo.toml  Dockerfile  Taskfile.yaml
frontend/src/: main.rs  operator_connection.rs  state.rs
frontend/src/state/: init.rs  mod.rs  ready.rs  update.rs  waiting_for_operator.rs
helm/: Chart.yaml  lich-0.1.0.tgz  values.dev.yaml  values.yaml
helm/templates/: NOTES.txt
helm/templates/configmaps/: backend.yaml  frontend.yaml  operator.yaml
helm/templates/depoyments/: backend.yaml  frontend.yaml
helm/templates/services/: backend.yaml  frontend.yaml  operator.yaml
helm/templates/statefulsets/: backend.yaml  frontend.yaml  operator.yaml
helm/templates/volumes/: backend.yaml
io/: Cargo.toml  Taskfile.yaml
io/src/: incoming.rs  lib.rs  metrics.rs  outgoing.rs
logger/: Cargo.toml
logger/src/: lib.rs
net/: Cargo.toml
net/src/: session.rs
net/src/stream/: mod.rs  real.rs  test.rs
operator/: Cargo.toml  Dockerfile  Taskfile.yaml
operator/src/: chain.rs  error.rs  main.rs  operator.rs
requests/: Cargo.toml
requests/src/: lib.rs
scripts/: get-logs.sh
src/: acks.rs  config.rs  error.rs  incoming.rs  main.rs  operator.rs  outgoing.rs  reqres.rs  session.rs  state.rs  store.rs  stream.rs  util.rs
src/backend/: incoming.rs  mod.rs  outgoing.rs  state.rs  store.rs
src/common/: mod.rs  reqres.rs  session.rs  stream.rs
src/frontend/: incoming.rs  mod.rs  outgoing.rs  state.rs
src/operator/: chain.rs  mod.rs
src/outgoing/: mod.rs
tests/: backend.toml  chain_bringup.rs  operator.toml
util/: Cargo.toml
util/src/: lib.rs
