[package]
edition = "2021"
name = "lich"
version = "0.1.0"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
hashlink = "0.8"
kube = { version = "0.86", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.20", features = ["latest"], optional = true }
log = "0.4"
parking_lot = "0.12"
pretty_env_logger = "0.5"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
uuid = { version = "1.4", features = ["serde", "v4"] }

necronomicon = { git = "https://github.com/nyanzoo/necronomicon", branch = "master" }
# necronomicon = { path = "../necronomicon" }
phylactery = { git = "https://github.com/nyanzoo/phylactery", branch = "develop" }
# phylactery = { path = "../phylactery" }


[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
lazy_static = "1.4"
matches = "0.1"
tempfile = "3.8"

[features]
default = []
# clients
client = []
# servers
backend = []
frontend = []
operator = []
# controller
controller = ["kube", "k8s-openapi"]
