[package]
edition = "2021"
name = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { workspace = true }
env_logger = { workspace = true }
hashlink = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { version = "1.4", features = ["serde", "v4"] }

config = { path = "../config" }
io = { path = "../io" }
net = { path = "../net" }
requests = { path = "../requests", features = ["backend"] }
util = { path = "../util" }

necronomicon = { workspace = true }
phylactery = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

necronomicon = { workspace = true, features = ["test"] }
