[package]
edition = "2021"
name = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { workspace = true }
dhat = { workspace = true, optional = true }
hashlink = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { version = "1.8", features = ["serde", "v4"] }

config = { path = "../config" }
io = { path = "../io" }
logger = { path = "../logger" }
net = { path = "../net" }
requests = { path = "../requests", features = ["backend"] }

necronomicon = { workspace = true, features = ["timeout"] }
phylactery = { workspace = true, branch = "develop" }

[dev-dependencies]
tempfile = { workspace = true }

necronomicon = { workspace = true, features = ["test"] }

# Enable with dhat for memory profiling
# [profile.release]
# debug = 1

[features]
default = []
dhat_heap = ["dhat"]
