[package]
edition = "2021"
name = "config"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
human-size = { workspace = true, features = ["enable-serde"] }
serde = { workspace = true, features = ["derive"] }

phylactery = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
matches = { workspace = true }
toml = { workspace = true }

[features]
