[package]
edition = "2021"
name = "frontend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

config = { path = "../config" }
net = { path = "../net" }
io = { path = "../io" }
requests = { path = "../requests" }

necronomicon = { workspace = true, branch = "develop" }
phylactery = { workspace = true, branch = "develop" }


[dev-dependencies]
