[package]
edition = "2021"
name = "io"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

net = { path = "../net" }
requests = { path = "../requests", features = ["backend"] }

necronomicon = { workspace = true }
phylactery = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
matches = { workspace = true }

net = { path = "../net", features = ["test"] }

necronomicon = { workspace = true, features = ["test"] }
