[package]
edition = "2021"
name = "logger"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
env_logger = { workspace = true, optional = true }
opentelemetry-appender-log = { workspace = true, default-features = false, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
opentelemetry-stdout = { workspace = true, optional = true }
syslog = { workspace = true, optional = true }

[features]
default = ["simple"]
otel = [
    "opentelemetry/logs",
    "opentelemetry_sdk/logs",
    "opentelemetry-semantic-conventions",
    "opentelemetry-appender-log",
    "opentelemetry-stdout/logs",
]
simple = ["env_logger"]
sys = ["syslog"]
