[package]
edition = "2021"
name = "net"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4", optional = true }
log = "0.4"
parking_lot = { version = "0.12", optional = true }

necronomicon = { git = "https://github.com/nyanzoo/necronomicon", branch = "master", optional = true }

[dev-dependencies]

[features]
default = []
tests = ["lazy_static", "necronomicon", "parking_lot"]
