[package]
edition = "2021"
name = "net"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4", optional = true }
log = "0.4"
parking_lot = { version = "0.12", optional = true }

necronomicon = { git = "https://github.com/nyanzoo/necronomicon", branch = "develop", optional = true }

[dev-dependencies]
necronomicon = { git = "https://github.com/nyanzoo/necronomicon", branch = "develop", features = [
    "test",
] }

[features]
default = []
test = ["lazy_static", "necronomicon/test", "parking_lot"]
