[package]
edition = "2021"
name = "net"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
lazy_static = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

necronomicon = { workspace = true, optional = true }

[dev-dependencies]
necronomicon = { workspace = true, features = ["test"] }

[features]
default = []
test = ["lazy_static", "necronomicon/test", "parking_lot"]
