[package]
edition = "2021"
name = "operator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
env_logger = "0.11"
log = "0.4"
parking_lot = "0.12"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"

config = { path = "../config" }
net = { path = "../net" }
requests = { path = "../requests" }

necronomicon = { git = "https://github.com/nyanzoo/necronomicon", branch = "develop" }
phylactery = { git = "https://github.com/nyanzoo/phylactery", branch = "develop" }


[dev-dependencies]
net = { path = "../net", features = ["test"] }
