[package]
edition = "2021"
name = "operator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }

config = { path = "../config" }
io = { path = "../io" }
logger = { path = "../logger" }
net = { path = "../net" }
requests = { path = "../requests" }

necronomicon = { workspace = true }
phylactery = { workspace = true }


[dev-dependencies]
net = { path = "../net", features = ["test"] }

necronomicon = { workspace = true, features = ["test"] }
