[package]
edition = "2021"
name = "requests"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
log = "0.4"
thiserror = "1.0"

necronomicon = { git = "https://github.com/nyanzoo/necronomicon", branch = "master" }

[dev-dependencies]

[features]
backend = []
