[package]
edition = "2021"
name = "client-bench"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }

necronomicon = { git = "https://github.com/nyanzoo/necronomicon", branch = "master" }
