[package]
edition = "2021"
name = "client-bench"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
rand = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

logger = { path = "../../logger" }

necronomicon = { workspace = true, features = ["test"] }
